--- a/style.css
+++ b/style.css
@@ -1,16 +1,31 @@
- 
-td.color{
-    border: 1px solid rgb(0, 0, 0)
-}
-.black{
+ .color {
+   border: 1px solid rgb(0, 0, 0);
+   padding: 30px;
+   display: inline-block;
+   width: 40px;
+   height: 40px;
+ }
+
+ .black {
     background-color: black;
-}
-.red{
-    background-color: red;
-}
-.purple{
-    background-color: purple;
-}
-.green{
-    background-color:green;
+  }
+
+ .red {
+   background-color: red;
+ }
+
+ .purple {
+   background-color: purple;
+ }
+
+ .green {
+   background-color: green;
+ }
+.pixel{
+    border: 1px solid rgb(0, 0, 0);
+    padding: 30px;
+    background-color: white;
+    display: inline-block;
+    width: 40px;
+    height: 40px;
 }
