--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
- .color {
+ .color{
    border: 1px solid rgb(0, 0, 0);
    padding: 30px;
    display: inline-block;
@@ -6,26 +6,27 @@
    height: 40px;
  }
 
- .black {
-    background-color: black;
-  }
+ #black {
+   background-color: black;
+ }
 
- .red {
+ #red {
    background-color: red;
  }
 
- .purple {
+ #purple {
    background-color: purple;
  }
 
- .green {
+ #green {
    background-color: green;
  }
-.pixel{
-    border: 1px solid rgb(0, 0, 0);
-    padding: 30px;
-    background-color: white;
-    display: inline-block;
-    width: 40px;
-    height: 40px;
-}
+
+ .pixel {
+   border: 1px solid rgb(0, 0, 0);
+   padding: 30px;
+   background-color: white;
+   display: inline-block;
+   width: 40px;
+   height: 40px;
+ }
