--- a/style.css
+++ b/style.css
@@ -6,27 +6,14 @@
    height: 40px;
  }
 
- #black {
-   background-color: black;
- }
-
- #red {
-   background-color: red;
- }
-
- #purple {
-   background-color: purple;
- }
-
- #green {
-   background-color: green;
- }
-
  .pixel {
    border: 1px solid rgb(0, 0, 0);
    padding: 30px;
-   background-color: white;
+   background-color:white;
    display: inline-block;
    width: 40px;
    height: 40px;
+ }
+ #clear-board {
+   background-color: white;
  }
