--- a/style.css
+++ b/style.css
@@ -1,20 +1,20 @@
 .color {
-  border: 1px solid rgb(0, 0, 0);
+  border: 1px solid rgb(0,0,0);
   padding: 30px;
   display: inline-block;
   width: 40px;
   height: 40px;
- }
+}
 
 .pixel {
-  border: 1px solid rgb(0, 0, 0);
+  border: 1px solid rgb(0,0,0);
   padding: 30px;
   background-color: white;
   display: inline-block;
   width: 40px;
   height: 40px;
- }
+}
 
 #clear-board {
   background-color: white;
- }
+}
